--- a/course.html
+++ b/course.html
@@ -20,7 +20,7 @@
       <div class="container">
         <section class="heroBanner heroBanner--course">
           <div class="heroBanner__row">
-            <div class="heroIcon">📚</div>
+            <div class="heroIcon" id="heroLevelIcon">-</div>
 
             <div class="heroBanner__content">
               <h1 class="glow-text heroTitle">Programa</h1>
@@ -28,7 +28,7 @@
               <p class="subtitle levelSubtitle" id="levelSubtitle">Nivel</p>
 
               <div class="levelButtons">
-                <a class="btn-white-outline" href="espanel.html">🏠 Libreta</a>
+                <a class="btn-white-outline" href="espanel.html">Libreta</a>
                 <a class="btn-white-outline" href="course.html?level=A1">A1</a>
                 <a class="btn-white-outline" href="course.html?level=A2">A2</a>
                 <a class="btn-white-outline" href="course.html?level=B1">B1</a>
@@ -41,8 +41,9 @@
         <div class="card card--info">
           <div class="rowBetween">
             <div class="mutedStrong">
-              Elige un tema para abrir la lección. Los badges muestran: ✅
-              lección publicada · 🟡 borrador · 🧩 ejercicios.
+              Elige un tema para abrir la lecci&oacute;n. Los badges muestran:
+              &#x2705; lecci&oacute;n publicada &middot; &#x1F7E1; borrador
+              &middot; &#x1F9E9; ejercicios.
             </div>
 
             <a
@@ -51,7 +52,7 @@
               id="adminQuickLesson"
               style="display: none"
             >
-              🛠️ Admin
+              &#x1F6E0;&#xFE0F; Admin
             </a>
           </div>
         </div>
@@ -63,14 +64,14 @@
     <div class="modalOverlay" id="accessModal" style="display: none">
       <div class="modalCard" style="max-width: 520px">
         <div class="modalHead">
-          <div class="modalTitle">🔒 Epa, suave…</div>
+          <div class="modalTitle">&#x1F512; Epa, suave...</div>
           <button class="btn-white-outline" id="accessModalClose" type="button">
-            ✖
+            X
           </button>
         </div>
         <div class="hr"></div>
         <div class="subtitle" id="accessModalLine1">
-          Este nivel todavía no es tuyo 😜
+          Este nivel todav&iacute;a no es tuyo &#x1F61C;
         </div>
         <div
           class="metaRow"
@@ -82,11 +83,11 @@
             href="services.html"
             style="text-decoration: none"
           >
-            Consíguelo
+            Cons&iacute;guelo
           </a>
         </div>
         <div class="subtitle" id="accessModalLine2" style="margin-top: 10px">
-          ...y sigamos dándole duro al Polaco.
+          ...y sigamos d&aacute;ndole duro al Polaco.
         </div>
       </div>
     </div>
