--- a/ejercicioadmin.html
+++ b/ejercicioadmin.html
@@ -405,6 +405,17 @@
               <option value="both">Gramatyka + slownictwo</option>
             </select>
           </div>
+          <div style="min-width: 190px">
+            <label style="display: block; font-weight: 700; margin-bottom: 6px"
+              >Sortuj</label
+            >
+            <select id="filterSort">
+              <option value="order_asc">Kolejnosc rosnaco</option>
+              <option value="order_desc">Kolejnosc malejaco</option>
+              <option value="prompt_asc">Tresc A-Z</option>
+              <option value="prompt_desc">Tresc Z-A</option>
+            </select>
+          </div>
 
           <button class="btn" id="btnClearFilters" type="button">
             Wyczysc
