--- a/espanel.html
+++ b/espanel.html
@@ -85,6 +85,21 @@
 
               <div class="hr"></div>
             </div>
+            <div class="card" id="progressSummaryCard">
+              <div class="sectionTitle" style="margin-top: 0">Progreso</div>
+              <div
+                class="metaRow"
+                style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
+              >
+                <span id="progTopics">Temas: -</span>
+                <span id="progCompleted">Completados: -</span>
+                <span id="progPractice">Práctica: -</span>
+                <span id="progTest">Test: -</span>
+              </div>
+              <div class="hintSmall" id="progLastActivity" style="margin-top: 8px">
+                Última actividad: -
+              </div>
+            </div>
           </div>
           <div class="referralSide">
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
