--- a/lessonpage.html
+++ b/lessonpage.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Lección | AquiVivo</title>
+    <title>Leccion | AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,14 +22,14 @@
       <div class="container">
         <div class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">📖</div>
+            <div class="heroIcon">LE</div>
             <div style="flex: 1">
-              <h1 id="lessonTitle">Cargando…</h1>
-              <p class="subtitle" id="lessonDesc">Cargando…</p>
+              <h1 id="lessonTitle">Cargando...</h1>
+              <p class="subtitle" id="lessonDesc">Cargando...</p>
 
               <div class="metaRow">
-                <span id="pillLevel">Nivel: —</span>
-                <span id="pillTopic">Tema: —</span>
+                <span id="pillLevel">Nivel: -</span>
+                <span id="pillTopic">Tema: -</span>
                 <span id="pillType" style="display: none"></span>
                 <span id="pillDuration" style="display: none"></span>
                 <span id="pillPub" style="display: none"></span>
@@ -37,7 +37,7 @@
                   id="pillAdminLink"
                   href="#"
                   style="display: none; text-decoration: none"
-                  >🛠 Admin lección</a
+                  >Admin leccion</a
                 >
               </div>
 
@@ -51,7 +51,13 @@
                     ></div>
                   </div>
                   <div class="readProgressText" id="readProgressText">
-                    📖 Progreso de lectura: 0%
+                    Ejercicios: 0%
+                  </div>
+                  <div class="readProgressText" id="testProgressText">
+                    Test: 0%
+                  </div>
+                  <div class="readProgressText" id="lessonStatusText">
+                    Estado: -
                   </div>
                 </div>
                 <div class="exerciseLinks" id="exerciseLinksWrap"></div>
@@ -61,7 +67,7 @@
         </div>
 
         <div id="tocWrap" style="display: none; margin-top: 12px">
-          <div class="sectionTitle">📌 En esta lección</div>
+          <div class="sectionTitle">En esta leccion</div>
           <div id="tocList" class="card" style="padding: 12px; margin: 0"></div>
         </div>
 
@@ -70,6 +76,33 @@
           class="card lessonSurface lessonHtml"
           style="display: none"
         ></div>
+        <div id="ratingCard" class="card" style="display: none">
+          <div class="sectionTitle" style="margin-top: 0">Tu opinion</div>
+          <div class="muted" style="margin-top: 6px">
+            Califica esta leccion y cuentanos si hubo algo dificil.
+          </div>
+          <div class="metaRow" style="margin-top: 12px; gap: 8px; flex-wrap: wrap">
+            <button class="btn-white-outline" type="button" data-rating="1">1</button>
+            <button class="btn-white-outline" type="button" data-rating="2">2</button>
+            <button class="btn-white-outline" type="button" data-rating="3">3</button>
+            <button class="btn-white-outline" type="button" data-rating="4">4</button>
+            <button class="btn-white-outline" type="button" data-rating="5">5</button>
+          </div>
+          <div style="margin-top: 10px">
+            <textarea
+              id="ratingText"
+              class="input"
+              rows="3"
+              placeholder="Tu comentario (opcional)"
+            ></textarea>
+          </div>
+          <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+            <button class="btn-yellow" id="btnSaveReview" type="button">
+              Enviar opinion
+            </button>
+            <span class="hintSmall" id="ratingMsg"></span>
+          </div>
+        </div>
         <div id="lessonSticky" class="lessonSticky" style="display: none"></div>
         <div id="lessonEmpty" class="empty" style="display: none"></div>
 
