--- a/ejercicio.html
+++ b/ejercicio.html
@@ -22,7 +22,7 @@
       <div class="container">
         <section class="heroBanner" style="padding: 22px 18px">
           <div class="heroTitleRow">
-            <div class="heroIcon">EJ</div>
+            <div class="heroIcon">&#x1F9E9;</div>
             <div style="flex: 1">
               <h1
                 class="glow-text"
