--- a/esadmin.html
+++ b/esadmin.html
@@ -13,7 +13,7 @@
       <div class="container">
         <section class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">ADMIN</div>
+            <div class="heroIcon">&#x1F6E0;&#xFE0F;</div>
             <div>
               <div class="metaRow" style="flex-wrap: wrap; gap: 10px">
                 <a class="btn-yellow" href="admin-select.html?type=lesson"
