--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">ADMIN</div>
+            <div class="heroIcon">&#x1F6E0;&#xFE0F;</div>
             <div>
               <h1 class="glow-text" style="margin: 0; font-size: 44px">
                 Admin lekcji
