--- a/espanel.html
+++ b/espanel.html
@@ -21,13 +21,26 @@
           <div class="panelHeroLeft">
             <div class="heroBanner" style="align-self: start">
               <div class="heroTitleRow">
-                <div class="heroIcon">🎓</div>
+                <div class="heroIcon heroIcon--avatar" id="userAvatarWrap">
+                  <img id="userAvatarImg" alt="Foto de perfil" />
+                  <span id="userAvatarFallback">🎓</span>
+                </div>
                 <div>
                   <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
                     ¡Buenas!
                   </h1>
                   <div class="muted" id="panelSubtitle" style="margin-top: 6px">
                     Aquí tienes tu libreta!<br />¡Qué chimba verte!
+                  </div>
+                  <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+                    <button class="btn-white-outline" id="btnAvatarUpload" type="button">
+                      Cambiar foto
+                    </button>
+                    <button class="btn-white-outline" id="btnAvatarRemove" type="button">
+                      Quitar foto
+                    </button>
+                    <span class="hintSmall" id="avatarMsg"></span>
+                    <input id="avatarFile" type="file" accept="image/*" style="display: none" />
                   </div>
                 </div>
               </div>
