--- a/lessonpage.html
+++ b/lessonpage.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">LE</div>
+            <div class="heroIcon">&#x1F4D6;</div>
             <div style="flex: 1">
               <h1 id="lessonTitle">Cargando...</h1>
               <p class="subtitle" id="lessonDesc">Cargando...</p>
