--- a/espanel.html
+++ b/espanel.html
@@ -113,6 +113,25 @@
                 Última actividad: -
               </div>
             </div>
+            <div class="card" id="reviewSummaryCard">
+              <div class="sectionTitle" style="margin-top: 0">Powtórki</div>
+              <div
+                class="metaRow"
+                style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
+              >
+                <span id="reviewDue">Na dziś: -</span>
+                <span id="reviewOverdue">Zaległe: -</span>
+                <span id="reviewNew">Nowe: -</span>
+              </div>
+              <div class="hintSmall" id="reviewPlan" style="margin-top: 8px">
+                Plan: 10 min dziennie
+              </div>
+              <div id="reviewWeek" class="reviewWeek" style="margin-top: 10px"></div>
+              <div class="metaRow" style="margin-top: 12px; gap: 10px">
+                <a class="btn-yellow" href="review.html">Start 10 min</a>
+                <span class="hintSmall" id="reviewHint"></span>
+              </div>
+            </div>
           </div>
           <div class="referralSide">
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
