--- a/review.html
+++ b/review.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Powtórki | AquiVivo</title>
+    <title>Repaso | AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -21,9 +21,9 @@
           <div class="heroTitleRow">
             <div class="heroIcon">🔁</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">Powtórki</h1>
+              <h1 class="glow-text" style="margin: 0">Repaso</h1>
               <div class="subtitle" id="reviewSubtitle" style="margin-top: 6px">
-                Mini‑powtórki dla pamięci długotrwałej.
+                Mini‑repasos para la memoria a largo plazo.
               </div>
             </div>
           </div>
@@ -31,39 +31,39 @@
 
         <section class="card" id="reviewStats">
           <div class="metaRow" style="gap: 14px; flex-wrap: wrap">
-            <span id="reviewCount">Na dziś: -</span>
-            <span id="reviewNew">Nowe: -</span>
-            <span id="reviewProgress">Postęp: 0/0</span>
+            <span id="reviewCount">Para hoy: -</span>
+            <span id="reviewNew">Nuevas: -</span>
+            <span id="reviewProgress">Progreso: 0/0</span>
           </div>
         </section>
 
         <section class="card reviewCard" id="reviewCard" style="margin-top: 14px">
           <div class="reviewCardInner">
-            <div class="reviewFront" id="reviewFront">Ładowanie...</div>
+            <div class="reviewFront" id="reviewFront">Cargando...</div>
             <div class="reviewBack" id="reviewBack"></div>
           </div>
           <div class="reviewActions">
             <button class="btn-white-outline" id="btnShowBack" type="button">
-              Pokaż odpowiedź
+              Mostrar respuesta
             </button>
             <button class="btn-yellow" id="btnCorrect" type="button" disabled>
-              Znam
+              La sé
             </button>
             <button class="btn-red" id="btnWrong" type="button" disabled>
-              Nie wiem
+              No lo sé
             </button>
-            <a class="btn-white-outline" href="espanel.html">Zakończ</a>
+            <a class="btn-white-outline" href="espanel.html">Terminar</a>
           </div>
           <div class="hintSmall" id="reviewHint" style="margin-top: 10px"></div>
         </section>
 
         <section class="card" id="reviewEmpty" style="display: none; margin-top: 14px">
-          <div class="sectionTitle" style="margin-top: 0">Brak powtórek</div>
+          <div class="sectionTitle" style="margin-top: 0">Sin repasos</div>
           <div class="muted">
-            Na dziś nie ma fiszek do powtórki. Wróć jutro albo zrób nowe ćwiczenia.
+            Hoy no hay tarjetas para repasar. Vuelve mañana o haz nuevos ejercicios.
           </div>
           <div style="margin-top: 12px">
-            <a class="btn-yellow" href="espanel.html">Wróć do Librety</a>
+            <a class="btn-yellow" href="espanel.html">Volver a la Libreta</a>
           </div>
         </section>
       </div>
