--- a/ejercicio.html
+++ b/ejercicio.html
@@ -70,6 +70,9 @@
                   <a class="btn-white-outline" id="btnBackLesson" href="#"
                     >Volver a la leccion</a
                   >
+                  <a class="btn-white-outline" id="btnReview" href="review.html"
+                    >Repasar</a
+                  >
                   <a class="btn-white-outline" id="btnBackCourse" href="#"
                     >Temas</a
                   >
