--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -191,6 +191,34 @@
           <div id="previewBody" style="margin-top: 12px"></div>
         </div>
 
+        <!-- Dodatkowe materialy (dla lessonpage) -->
+        <div class="card" style="margin-top: 16px">
+          <div class="sectionTitle" style="margin-top: 0">Materialy dodatkowe</div>
+          <div class="muted">
+            Te sekcje pojawiaja sie na stronie lekcji (lessonpage.html).
+          </div>
+
+          <div style="margin-top: 12px">
+            <label class="muted" style="font-weight: 800">Podsumowanie (1-3 zdania)</label>
+            <textarea id="extraSummary" rows="3" placeholder="Krotkie podsumowanie..."></textarea>
+          </div>
+
+          <div style="margin-top: 12px">
+            <label class="muted" style="font-weight: 800">Slownictwo (1 na linie)</label>
+            <textarea id="extraVocab" rows="4" placeholder="np. dom - casa"></textarea>
+          </div>
+
+          <div style="margin-top: 12px">
+            <label class="muted" style="font-weight: 800">Materialy / linki (Nazwa | URL)</label>
+            <textarea id="extraResources" rows="4" placeholder="np. PDF gramatyka | https://..."></textarea>
+          </div>
+
+          <div style="margin-top: 12px">
+            <label class="muted" style="font-weight: 800">Zadanie domowe</label>
+            <textarea id="extraHomework" rows="3" placeholder="Co zrobic po lekcji..."></textarea>
+          </div>
+        </div>
+
         <!-- Default styling controls -->
         <div class="card" style="margin-top: 16px">
           <div class="sectionTitle" style="margin-top: 0">
