--- a/lessonpage.html
+++ b/lessonpage.html
@@ -76,6 +76,7 @@
           class="card lessonSurface lessonHtml"
           style="display: none"
         ></div>
+        <div id="lessonExtras" style="display: none"></div>
         <div id="ratingCard" class="card" style="display: none">
           <div class="sectionTitle" style="margin-top: 0">Tu opinion</div>
           <div class="muted" style="margin-top: 6px">
