--- a/espanel.html
+++ b/espanel.html
@@ -124,7 +124,7 @@
                 <span id="reviewNew">Nuevas: -</span>
               </div>
               <div class="hintSmall" id="reviewPlan" style="margin-top: 8px">
-                Plan: 10 min al dia
+                Plan: 10 min al día
               </div>
               <div id="reviewWeek" class="reviewWeek" style="margin-top: 10px"></div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px">
@@ -156,6 +156,40 @@
                   Guardar
                 </button>
                 <span class="hintSmall" id="reviewSaveStatus"></span>
+              </div>
+            </div>
+            <div class="card" id="userSettingsCard">
+              <div class="sectionTitle" style="margin-top: 0">Ajustes del perfil</div>
+              <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
+                <input
+                  id="setDisplayName"
+                  class="input"
+                  placeholder="Nombre visible"
+                  style="min-width: 220px"
+                />
+                <select id="setGender" class="select" style="min-width: 160px">
+                  <option value="">Saludo neutro</option>
+                  <option value="mami">Mami</option>
+                  <option value="papi">Papi</option>
+                </select>
+                <select id="setLang" class="select" style="min-width: 160px">
+                  <option value="es">Español</option>
+                  <option value="pl">Polski</option>
+                </select>
+                <select id="setGoal" class="select" style="min-width: 180px">
+                  <option value="5">Meta: 5 min</option>
+                  <option value="10">Meta: 10 min</option>
+                  <option value="15">Meta: 15 min</option>
+                  <option value="20">Meta: 20 min</option>
+                </select>
+                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
+                  <input id="setReviewReminders" type="checkbox" />
+                  Recordatorios de repaso
+                </label>
+                <button class="btn-white-outline" id="btnSaveSettings" type="button">
+                  Guardar
+                </button>
+                <span class="hintSmall" id="settingsMsg"></span>
               </div>
             </div>
           </div>
