--- a/ejercicio.html
+++ b/ejercicio.html
@@ -67,15 +67,18 @@
                   </div>
                 </div>
                 <div class="exerciseLinks" id="exerciseLinksWrap">
-                  <a class="btn-white-outline" id="btnBackLesson" href="#"
-                    >Volver a la leccion</a
-                  >
-                  <a class="btn-white-outline" id="btnReview" href="review.html"
-                    >Repasar</a
-                  >
-                  <a class="btn-white-outline" id="btnBackCourse" href="#"
-                    >Temas</a
-                  >
+                <a class="btn-white-outline" id="btnBackLesson" href="#"
+                  >Volver a la leccion</a
+                >
+                <a class="btn-white-outline" id="btnReview" href="review.html"
+                  >Repasar</a
+                >
+                <a class="btn-white-outline" id="btnFlashcards" href="flashcards.html"
+                  >Fichas</a
+                >
+                <a class="btn-white-outline" id="btnBackCourse" href="#"
+                  >Temas</a
+                >
                 </div>
               </div>
             </div>
