--- a/espanel.html
+++ b/espanel.html
@@ -129,6 +129,7 @@
               <div id="reviewWeek" class="reviewWeek" style="margin-top: 10px"></div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px">
                 <a class="btn-yellow" href="review.html">Empezar 10 min</a>
+                <a class="btn-white-outline" href="flashcards.html">Fichas</a>
                 <span class="hintSmall" id="reviewHint"></span>
               </div>
               <div class="hr"></div>
